--- a/src/components/Pages/Homepage/cart.css
+++ b/src/components/Pages/Homepage/cart.css
@@ -2,7 +2,7 @@
 
 .cart-container1 {
     width: 100%;
-    height: 690px;
+    height: 100vh;
     overflow: auto;
     /* background-color: #f74a4a; */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -379,7 +379,18 @@ span{
 
 @media screen and (max-width: 500px) {
   .hd{
-    text-align: center;
+    /* margin: 20px 10px; */
+    margin-bottom:60px;
+    font-size: 25px;
+    
+     
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    margin-top: 55px;
+    font-family: 'Inter';
+    font-weight: 560;
+    position: relative;
+    right: -10px;
   }
   .divcardd{
     display: flex;
@@ -399,6 +410,7 @@ span{
     cursor: pointer;
     font-size: 26px;
     border: none;
+    left: 0px;
 
   }
   .textcart{
@@ -412,9 +424,9 @@ span{
     width: 190px;
     border-radius: 20px;
     border: none;
-    font-size: 25px;
+    font-size: 18px;
     background-color: #000000;
-    color: #ccc;
+   font-family: 'inter';
   }
   .one1{
     width: 100%;
@@ -439,7 +451,7 @@ span{
     /* border: 2px solid black; */
   }
   .one2{
-    margin-left: 17px;
+    margin-left: 37px;
     margin-top: 10px;
     font-size:20px;
     font-family: 'Inter', sans-serif;
@@ -467,6 +479,7 @@ span{
   .card1 img{
     height: 130px;
     width: 130px;
+    right: 0px;
   }
   .all{
     height:  100px;
@@ -485,6 +498,34 @@ span{
   .chk p{
     font-size: 25px;
     margin-bottom: 2px;
+  }
+
+  .chk h3{
+
+    font-size: 17px;
+     
+    letter-spacing: 0px;
+    text-transform: uppercase;
+    margin-top: 40px;
+    font-family: 'Inter';
+    font-weight: 460;
+    position: relative;
+    left: 0px;
+  
+  }
+  
+  .chk p{
+    font-size: 17px;
+     
+    letter-spacing: 0px;
+    text-transform: uppercase;
+    margin-top: 5px;
+    margin-bottom: 30px;
+    font-family: 'Inter';
+    font-weight: 460;
+    position: relative;
+    left: 0px;
+  
   }
 
 }
