--- a/src/components/Pages/Item.css
+++ b/src/components/Pages/Item.css
@@ -1,27 +1,26 @@
-.divdata{
-    height: 660px;
-    width: 100%;
-    background-color: aqua;
+.divdata {
+  height: 660px;
+  width: 100%;
+  background-color: aqua;
 }
-.breadcrumb{
+.breadcrumb {
   margin: 40px 40px;
   font-size: 20px;
   font-weight: 600;
-  font-family: 'Inter';
+  font-family: "Inter";
   letter-spacing: 0px;
-  color: #555555;
+  color: #474747;
 }
-.flex-container1{
-    display: grid;
+.flex-container1 {
+  display: grid;
   grid-template-columns: repeat(4, 1fr);
-    /* justify-content: center; */
-    /* margin-left: 20px; */
+  /* justify-content: center; */
+  /* margin-left: 20px; */
 }
-.itemdiv1{
-    width: 300px;
+.itemdiv1 {
+  width: 300px;
   margin: 20px;
   padding: 10px;
-
 }
 
 .imgg1 {
@@ -35,41 +34,51 @@
   margin-top: 10px;
   /* Additional styles for the text content */
 }
-.headstore1{
-        font-size:16px;
-    font-weight: 600;
-  font-family: 'Inter';
-  color: #555555;
-  letter-spacing: 1px;
-
-}
-.headstore2{
-  font-size:15px;
+.headstore1 {
+  font-size: 16px;
   font-weight: 600;
-font-family: 'Inter';
-color: #555555;
-letter-spacing: 1px;
-margin-top: 10px;
+  font-family: "Inter";
+  color: #474747;
+  letter-spacing: 1px;
+}
+.headstore2 {
+  font-size: 15px;
+  font-weight: 600;
+  font-family: "Inter";
+  color: #474747;
+  letter-spacing: 1px;
+  margin-top: 10px;
 }
 
 @media screen and (max-width: 500px) {
-    .flex-container1{
-        grid-template-columns: repeat(2, 1fr);
-}
-.headstore1{
-        font-size: 22px;
-    font-weight: 700;
-}
-.headstore2{
-    font-size: 20px;
-}
-.itemdiv1{
+  .flex-container1 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .headstore1 {
+    font-size: 14px !important;
+    font-weight: 600 !important;
+    letter-spacing: 0px;
+  }
+  .headstore2 {
+    font-size: 14px !important;
+    font-weight: 600 !important;
+    letter-spacing: 0px;
+  }
+  .itemdiv1 {
     width: auto;
-  margin: 3px;
-  padding: 5px;
-  border: 1px solid #ccc;
-}
-.imgg1{
+    margin: 5px;
+    padding: 5px;
+  }
+  .imgg1 {
     height: 180px;
-}
+  }
+
+  .breadcrumb {
+    margin: 20px 15px 20px 15px;
+    font-size: 18px;
+    font-weight: 500;
+    font-family: "Inter";
+    letter-spacing: 0px;
+    color: #474747;
+  }
 }
