--- a/src/components/Pages/Homepage/cart.css
+++ b/src/components/Pages/Homepage/cart.css
@@ -2,7 +2,7 @@
 
 .cart-container1 {
     width: 100%;
-    height: 100vh;
+    height: 800px;
     overflow: auto;
     /* background-color: #f74a4a; */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -66,12 +66,12 @@
 
 .card1{
   height: 201px;
-  width: 80%;
+  width: 100%;
   border-top: 2px solid rgb(185,185,185);
   border-bottom: 1px solid rgb(185, 185, 185);
   display: flex;
   margin: auto;
-  margin-left: 130px;
+  margin-left: 00px;
   padding: 40px 30px;
 }
 
@@ -377,7 +377,7 @@ span{
   margin-bottom: 20px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 780px) {
   .hd{
     /* margin: 20px 10px; */
     margin-bottom:60px;
