--- a/src/components/header/Navbar.css
+++ b/src/components/header/Navbar.css
@@ -36,13 +36,13 @@
 }
 .dropdown-menu{
   display: none;
-  position: absolute;
+ 
 
-  left: 0;
+ 
   background-color: white;
   min-width: 120px;
   padding: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .dropdown-menu li{
   display: block;
@@ -51,11 +51,24 @@
   text-decoration: none;
   padding: 5px 10px;
 }
-.list:hover{
-  color: #6e00ff;
+.list{
+  text-decoration: none;
+  color: black;
+  font-size: 16px; 
+  font-family: "Inter";
+  letter-spacing: 0px;
+  font-weight: 500;
+  margin: 10px 0px -40px 0px;
+  text-align: center;
 }
+
 .navbar-item1:hover .dropdown-menu {
   display: block;
+  
+  position:absolute;
+  margin-left: -65px;
+  margin-top: 10px;
+  
 }
 
 
@@ -93,6 +106,8 @@
   /* height: 50px; */
   position: relative;
   display: inline-block;
+  height: 50px;
+  margin-top: 35px;
 }
 .navbar-link1{
   text-decoration: none;
@@ -188,7 +203,7 @@
 }
 
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 780px) {
 .navbar{
   height: 80px;
 }
@@ -232,6 +247,10 @@
   }
   .navbar-item1{
     margin-left: 9px;
+    margin-top: 0px;
+    margin-bottom: 5px;
+    height: 500px;
+   
   }
 
   .sidebar.open {
@@ -258,19 +277,41 @@
   }
  
   .dropdown-menu{
-    height: 300px;
-    margin: 0px 0px;
+  
+    margin: 0px 0px 10px 0px;
     font-size: 11px;
     color: #555555;
     display: none;
     width: 100%;
     position: initial;
+    text-decoration: none;
+    color: black;
+    font-size: 12px; 
+    font-family: "Inter";
+    letter-spacing: 3px;
+    font-weight: 500;
+    
+  
+    position: relative;
   }
+  .navbar-item1:hover .dropdown-menu {
+    display: block;
+    position: relative;
+    margin-left: -15px;
+    margin-top: 30px;
+}
   .dropdown-menu li{
     margin: 20px 0px;
     font-size: 25px;
     cursor: pointer;
     font-weight: 400;
+    text-decoration: none;
+    color: black;
+    font-size: 12px; 
+    font-family: "Inter";
+    letter-spacing: 3px;
+    font-weight: 500;
+    position: relative !important;
   }
   .dropdown-menu h1:hover{
     color: red;
