--- a/src/components/Pages/Homepage/Homescreen.css
+++ b/src/components/Pages/Homepage/Homescreen.css
@@ -49,7 +49,7 @@
     color: #FFFFFF;
 }
 .card1c{
-    height: 135vh;
+    height: 900px;
     background-color: #edebeb;
     display: flex;  
 }
@@ -138,6 +138,8 @@
     height: 100vh;
     width: 100%;
     /* background-color: aqua; */
+    position: relative;
+    top: 50px;
 }
 .Card2-container{
     /* margin: auto; */
@@ -768,7 +770,9 @@
     .card2div1{
         /* width: 0px; */
         width: 100%;
-    }
+        height: 100%;
+
+overflow-x: hidden;    }
     .card5-container h2{
         color: #000000;
         font-size: 14px;
@@ -843,6 +847,17 @@
     }
     .card4{
         height: 1720px !important;
+    }
+
+    .card4 h3 {
+        text-align: center;
+        padding-top: 30px;
+        padding-bottom: 0px;
+        letter-spacing: 6px;
+        font-family: 'Inter', sans-serif;
+        font-size: 20px;
+        font-weight: 600;
+        /* margin: 20px 20px; */
     }
     .upcard4{
         flex-direction: column;
