--- a/src/components/Pages/Store/store.css
+++ b/src/components/Pages/Store/store.css
@@ -68,6 +68,9 @@
   width: 80px;
   height: 80px;
   left: 700px  ;
+  margin: 0px 50px 50px 100px;
+  position: relative;
+  right: 100px !important;
 }
 .lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
