--- a/src/components/Pages/Admin.css
+++ b/src/components/Pages/Admin.css
@@ -1,5 +1,5 @@
 .admin{
-    height: 950px;
+    height: 990px;
     width: 100%;
     /* background-color: aqua; */
 }
@@ -205,6 +205,27 @@ textarea::placeholder{
     margin: 10px 70px;
     border: none;
 }
+
+.loader {
+    /* position: fixed; */
+    /* position: absolute; */
+    /* top: 80px; */
+    margin-top: 10px;
+    /* right: 60px; */
+    width: 40px;
+    height: 40px;
+    border: 4px solid #252323;
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+
 
   @media screen and (max-width: 780px) {
     .admin{
