--- a/src/components/header/Navbar.css
+++ b/src/components/header/Navbar.css
@@ -39,10 +39,11 @@
  
 
  
-  background-color: white;
+  background-color: whitesmoke;
   min-width: 120px;
   height: auto;
   padding: 10px;
+  z-index: 999;
 
 }
 .dropdown-menu li{
@@ -68,7 +69,7 @@
   
   position:absolute;
   margin-left: -65px;
-  margin-top: 10px;
+  margin-top: 0px;
   
 }
 
