--- a/src/components/header/Navbar.css
+++ b/src/components/header/Navbar.css
@@ -44,9 +44,6 @@
   height: auto;
   padding: 10px;
   z-index: 999;
-  position: relative;
-  left: 7px;
-
 
 }
 .dropdown-menu li{
@@ -207,20 +204,23 @@
   cursor: pointer;
 }
 .cartq{
-  height: 22px;
-  width: 22px;
+  height: 18px;
+  width: 18px;
   border-radius: 50%;
   position: absolute;
-  top: -10px;
-  left: 285px;
+  top: 12px;
+  left: 288px;
+  font-family: "inter" , sans-serif;
   /* right: 60px; */
-  font-size: 13px;
-  color: #666;
+  font-size: 12px;
+  color: black;
   right: 13px;
   align-items: center;
   justify-content: center;
   display: flex;
-  background-color: #bec1c5;
+  background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 @media screen and (max-width: 780px) {
