--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,61 @@
 ::-webkit-scrollbar {
     display: none;
 }
+
+
+.react-swipeable-view-container > div {
+    overflow: unset !important;
+    
+    }
+
+
+    :root {
+        --toastify-color-light: #fff;
+        --toastify-color-dark: #121212;
+        --toastify-color-info: #3498db;
+        --toastify-color-success: #000000 !important;
+        --toastify-color-warning: #f1c40f;
+        --toastify-color-error: #000000 !important;
+        --toastify-color-transparent: transparent;
+      
+        --toastify-icon-color-info: var(--toastify-color-info);
+        --toastify-icon-color-success: var(--toastify-color-success);
+        --toastify-icon-color-warning: var(--toastify-color-warning);
+        --toastify-icon-color-error: var(--toastify-color-error);
+      
+        --toastify-toast-width: 220px !important;
+        --toastify-toast-background: transparent !important;
+        --toastify-toast-min-height: 34px !important;
+        --toastify-toast-max-height: 800px;
+        --toastify-font-family: sans-serif;
+        --toastify-z-index: 9999;
+      
+        --toastify-text-color-light: #757575;
+        --toastify-text-color-dark: #fff;
+      
+        
+        --toastify-text-color-info: #fff;
+        --toastify-text-color-success: #fff;
+        --toastify-text-color-warning: #fff;
+        --toastify-text-color-error: #fff;
+      
+        --toastify-spinner-color: #616161;
+        --toastify-spinner-color-empty-area: #e0e0e0;
+      
+       
+        --toastify-color-progress-light: linear-gradient(
+          to right,
+          #4cd964,
+          #5ac8fa,
+          #007aff,
+          #34aadc,
+          #5856d6,
+          #ff2d55
+        );
+       
+        --toastify-color-progress-dark: #bb86fc;
+        --toastify-color-progress-info: var(--toastify-color-info);
+        --toastify-color-progress-success: var(--toastify-color-success);
+        --toastify-color-progress-warning: var(--toastify-color-warning);
+        --toastify-color-progress-error: var(--toastify-color-error);
+      }
