--- a/src/components/Pages/Homepage/Payment.css
+++ b/src/components/Pages/Homepage/Payment.css
@@ -390,6 +390,7 @@ input {
     height: 91px;
     width: 95px;
     border-radius: 14px;
+    object-fit: cover;
   }
   .divpay h3 {
     margin-top: 30px;
