--- a/src/components/Pages/Homepage/cart.css
+++ b/src/components/Pages/Homepage/cart.css
@@ -3,7 +3,7 @@
 .cart-container1 {
     width: 100%;
     height: 800px;
-    overflow: auto;
+    overflow: hidden;
     /* background-color: #f74a4a; */
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
     /* overflow: hidden; */
@@ -387,7 +387,7 @@ span{
      
     letter-spacing: 4px;
     text-transform: uppercase;
-    margin-top: 55px;
+    margin-top: -10px;
     font-family: 'Inter';
     font-weight: 560;
     position: relative;
@@ -452,7 +452,7 @@ span{
     /* border: 2px solid black; */
   }
   .one2{
-    margin-left: 37px;
+    margin-left: 19px;
     margin-top: 10px;
     font-size:20px;
     font-family: 'Inter', sans-serif;
@@ -463,7 +463,7 @@ span{
   .hd{
     /* margin: 20px 10px; */
     margin-bottom: 30px;
-    font-size: 30px;
+    font-size: 20px;
   }
   
   .card1{
@@ -474,13 +474,13 @@ span{
     display: flex;
     margin: auto;
     margin-left: 0px;
-    padding: 40px 10px;
+    padding: 25px 10px;
   }
   
   .card1 img{
-    height: 130px;
-    width: 130px;
+  
     right: 0px;
+    object-fit: cover;
   }
   .all{
     height:  100px;
@@ -507,7 +507,7 @@ span{
      
     letter-spacing: 0px;
     text-transform: uppercase;
-    margin-top: 40px;
+    margin-top: 10px;
     font-family: 'Inter';
     font-weight: 460;
     position: relative;
