--- a/src/components/header/Navbar.css
+++ b/src/components/header/Navbar.css
@@ -209,18 +209,22 @@
   border-radius: 50%;
   position: absolute;
   top: 12px;
-  left: 288px;
-  font-family: "inter" , sans-serif;
+  left: 289px;
   /* right: 60px; */
-  font-size: 12px;
-  color: black;
+  font-size: 8px;
+  color: white;
   right: 13px;
   align-items: center;
   justify-content: center;
   display: flex;
-  background-color: #ffffff;
+  background-color: black;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+.cartq h2{
+  font-family: "inter" , sans-serif;
+
 }
 
 @media screen and (max-width: 780px) {
