--- a/src/components/Pages/Store/store.css
+++ b/src/components/Pages/Store/store.css
@@ -216,7 +216,7 @@ align-items: flex-end;
   }
   .storecontainer{
     height: 43vh;
-    background: url(./chef.png)no-repeat center center/cover;
+    background: url(./women.png)no-repeat center center/cover;
   }
   .rev-homestore{
     margin: 8px 8px;
