--- a/src/components/Pages/Item.css
+++ b/src/components/Pages/Item.css
@@ -23,6 +23,7 @@
   margin: 0px 0px 20px 7px;
   padding: 0px;
   overflow: hidden;
+  height: 630px;
 
 }
 .storeImgContainer{
@@ -81,6 +82,7 @@
     margin: 0px 0px 0px 7px;
     padding: 0px;
     overflow: hidden;
+    height: 355px;
   
   }
   .storeImgContainer{
