--- a/src/components/Pages/Homepage/Payment.css
+++ b/src/components/Pages/Homepage/Payment.css
@@ -290,6 +290,7 @@ input {
   font-weight: 400;
   position: relative;
   left: 15px;
+  width: 180px;
 }
 .divpay h2 {
   font-family: "Inter", sans-serif;
@@ -411,7 +412,8 @@ input {
     font-family: "Inter";
     font-weight: 400;
     position: relative;
-    left: 15px;
+    left: 0px;
+    width: 130px;
   }
   .divpay h2 {
     font-family: "Inter", sans-serif;
