--- a/src/components/header/Navbar.css
+++ b/src/components/header/Navbar.css
@@ -40,10 +40,12 @@
 
  
   background-color: white;
-  min-width: 120px;
+  min-width: 180px;
   height: auto;
   padding: 10px;
   z-index: 999;
+  position: relative;
+  right: 10px;
 
 }
 .dropdown-menu li{
@@ -52,6 +54,7 @@
   cursor: pointer;
   text-decoration: none;
   padding: 5px 10px;
+  font-size: 14px;
 }
 .list{
   text-decoration: none;
@@ -71,6 +74,27 @@
   margin-left: -65px;
   margin-top: 0px;
   
+}
+
+.dropdown-menu {
+  visibility: hidden; /* Change display to visibility */
+  opacity: 0;
+  background-color: white;
+  min-width: 180px;
+  padding: 10px;
+  z-index: 999;
+  position: relative;
+  right: 10px;
+  transition: opacity 0.3s, visibility 0.3s; /* Transition properties */
+}
+
+.navbar-item1:hover .dropdown-menu {
+  visibility: visible; /* Change display to visibility */
+  opacity: 1;
+  margin-left: -65px;
+  margin-top: 0px;
+  position: absolute;
+  /* Add other properties as needed... */
 }
 
 
