--- a/src/components/header/Navbar.css
+++ b/src/components/header/Navbar.css
@@ -45,26 +45,31 @@
   padding: 10px;
   z-index: 999;
   position: relative;
-  right: 10px;
+  right: -200px;
+  top: 43px;
+  border-top: 2.5px solid black;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  z-index: -1;
 
 }
 .dropdown-menu li{
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   cursor: pointer;
   text-decoration: none;
   padding: 5px 10px;
-  font-size: 14px;
+  font-size: 13px;
+  /* font-weight: bold; */
 }
 .list{
   text-decoration: none;
   color: black;
-  font-size: 16px; 
+  font-size: 18px; 
   font-family: "Inter";
   letter-spacing: 0px;
   font-weight: 500;
-  margin: 10px 0px -40px 0px;
-  text-align: center;
+  margin: 10px 0px -20px 0px;
+  /* text-align: center; */
 }
 
 .navbar-item1:hover .dropdown-menu {
@@ -80,12 +85,14 @@
   visibility: hidden; /* Change display to visibility */
   opacity: 0;
   background-color: white;
-  min-width: 180px;
+  min-width: 230px;
   padding: 10px;
   z-index: 999;
   position: relative;
-  right: 10px;
+  right: -75px;
   transition: opacity 0.3s, visibility 0.3s; /* Transition properties */
+
+  
 }
 
 .navbar-item1:hover .dropdown-menu {
@@ -279,6 +286,7 @@ right: 30px;
     position: absolute;
     top: 31px;
     right: 60px;
+    z-index: 9999999;
   }
 
   .navbar-item{
