--- a/src/components/Pages/Aboutm.css
+++ b/src/components/Pages/Aboutm.css
@@ -263,14 +263,18 @@
     font-weight: 400;
 }
 .about4{
-    height:750px;
+    height:850px;
     width: 100%;
     display: flex;
-    padding: 20px 0px;
+    padding: 30px 0px;
     background-color: black;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+}
+.about4 img{
+    width: 95%;
+    height: 100%;
 }
 .ab4one{
     width: 33%;
@@ -450,10 +454,10 @@
     }
 
     .about3{
-        height: 500px;
+        height: 880px;
         width: 100%;
         display: flex;
-        /* background-color: aqua; */background: url('./dummy.png') no-repeat center center/cover;
+        /* background-color: aqua; */background: url('./dummy2.png') no-repeat center center/cover;
         flex-direction: row;
     }
 
