--- a/src/components/Pages/Store/store.css
+++ b/src/components/Pages/Store/store.css
@@ -80,10 +80,10 @@
   position: relative;
   width: 80px;
   height: 80px;
-  left: 700px  ;
-  margin: 0px 50px 50px 100px;
+ 
+  margin: 0px 50px 50px 0px;
   position: relative;
-  right: 100px !important;
+  right: 150px !important;
 }
 .lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
@@ -174,6 +174,16 @@
 justify-content: flex-end;
 align-items: flex-end;
   background: url(./women.png)no-repeat center center/cover;
+}
+.storecontainer1{
+  /* background-color: aqua; */
+  height: 70vh;
+  width: 100%;
+  /* border: 2px solid black; */
+  display: flex;
+justify-content: flex-end;
+align-items: flex-end;
+  background: url(./women1.png)no-repeat center center/cover;
 }
 .rev-homestore{
   margin-bottom: 5vh;
