--- a/src/components/header/Navbar.css
+++ b/src/components/header/Navbar.css
@@ -45,7 +45,7 @@
   padding: 10px;
   z-index: 999;
   position: relative;
-  right: -200px;
+  right: -100px;
   top: 43px;
   border-top: 2.5px solid black;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -89,7 +89,8 @@
   padding: 10px;
   z-index: 999;
   position: relative;
-  right: -75px;
+  top: 48px;
+  right: -55px;
   transition: opacity 0.3s, visibility 0.3s; /* Transition properties */
 
   
@@ -133,14 +134,14 @@
   color: red;
 }
 .navbar-item1{
-  margin-left: 50px;
+  padding-left: 50px;
   /* background-color: #6e00ff; */
   list-style: none;
   /* height: 50px; */
   position: relative;
   display: inline-block;
   height: 50px;
-  margin-top: 35px;
+  padding-top: 18px;
 }
 .navbar-link1{
   text-decoration: none;
@@ -485,4 +486,27 @@ right: 30px;
     width: 100%;
     margin-bottom: 20px;
   }
+  .dropdown-menu{
+    display: none;
+   
+  
+   
+    background-color: white;
+    min-width: 180px;
+    height: auto;
+    padding: 10px;
+    z-index: 999;
+    position: relative;
+    right: -0px;
+    top:0px;
+    border-top: none;
+    box-shadow: none;
+    z-index: -1;
+    padding-top: 20px;
+    padding-left: 10px;
+  
 }
+.navbar-item1{
+  padding-left: 0px;
+  padding-top: 0px;
+}}
