--- a/src/components/Pages/Homepage/Homescreen.css
+++ b/src/components/Pages/Homepage/Homescreen.css
@@ -54,12 +54,12 @@
 .imgcard1left {
   height: 100%;
   width: 50%;
-  padding: 30px;
+  padding: 10px 10px 10px 20px;
   /* background-color: aquamarine; */
 }
 .imgcard1left img {
   height: 100%;
-  width:90%;
+  width:85%;
   /* background-color: aquamarine; */
 }
 .iggmm {
@@ -92,7 +92,7 @@
 }
 
 .cardimgp img {
-  width: 84%;
+  width: 75%;
   height: 67%;
 }
 .cardimgp h2 {
@@ -143,7 +143,7 @@
   width: 100%;
   /* background-color: aqua; */
   position: relative;
-  top: 20px;
+  top: 50px;
 }
 .Card2-container {
   /* margin: auto; */
@@ -516,6 +516,8 @@
 
 .card4 {
   height: 125vh !important;
+  position: relative;
+  bottom: 20px;
 }
 .card4 h3 {
   text-align: center;
@@ -853,6 +855,9 @@
   }
   .card4 {
     height: 1720px !important;
+    position: relative;
+    bottom: 0px;
+  
   }
 
   .card4 h3 {
